@@ -17,6 +17,31 @@ public:
     // Distance between large masses
     h = 1.0 / static_cast<real>(p-1);
 
+    // Distance between small and large masses
+    hsmall = 0.5 * sqrt(2.0) * h;
+
+    // The small mass
+    m = 0.001;
+    
+    // Compute displacements for the small masses
+    dx.init((p-1)*(p-1));
+    dy.init((p-1)*(p-1));
+    for (unsigned int i = 0; i < (p-1)*(p-1); i++)
+    {
+      unsigned int i1 = i % (p - 1);
+      unsigned int i2 = i / (p - 1);
+
+      if ( i1 % 2 == 0 )
+	dx(i) = 0.25*h;
+      else
+	dx(i) = - 0.25*h;
+
+      if ( i2 % 2 == 0 )
+	dy(i) = - 0.25*h;
+      else
+	dy(i) = 0.25*h;      
+    }
+
     // Compute sparsity
     sparse();
   }
@@ -26,7 +51,9 @@ public:
     if ( i < p*p )
       return static_cast<real>(i % p) * h;
     else
-      return 0.5*h + static_cast<real>((i-p*p) % (p-1)) * h;
+    {
+      return 0.5*h + static_cast<real>((i-p*p) % (p-1)) * h + dx(i - p*p);
+    }
   }
 
   real y0(unsigned int i)
@@ -34,7 +61,15 @@ public:
     if ( i < p*p )
       return static_cast<real>(i / p) * h;
     else
-      return 0.5*h + static_cast<real>((i-p*p) / (p-1)) * h;
+      return 0.5*h + static_cast<real>((i-p*p) / (p-1)) * h + dy(i - p*p);
+  }
+  
+  real mass(unsigned int i, real t)
+  {
+    if ( i < p*p )
+      return 1.0;
+    else
+      return m;
   }
 
   real Fx(unsigned int i, real t)
@@ -45,6 +80,7 @@ public:
       // Compute force for large mass
       unsigned int i1 = i % p;
       unsigned int i2 = i / p;
+      unsigned int j  = p*p + (i2-1)*(p-1) + (i1 - 1);; // Small mass at south-west
 
       // Add force from the left
       if ( i1 > 0 )
@@ -73,12 +109,69 @@ public:
 	real r = dist(i, i + p);
 	fx += (r - h) * (x(i+p) - x(i)) / r;
       }
+
+      // Add force from south-west
+      if ( i1 > 0 && i2 > 0 && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j);
+	fx += (r - hsmall) * (x(j) - x(i)) / r;
+      }
+
+      // Add force from south-east
+      if ( i1 < (p-1) && i2 > 0 && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j + 1);
+	fx += (r - hsmall) * (x(j + 1) - x(i)) / r;
+      }
+
+      // Add force from north-west
+      if ( i1 > 0 && i2 < (p-1) && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j + p - 1);
+	fx += (r - hsmall) * (x(j + p - 1) - x(i)) / r;
+      }
+
+      // Add force from north-east
+      if ( i1 < (p-1) && i2 < (p-1) && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j + p - 1 + 1);
+	fx += (r - hsmall) * (x(j + p - 1 + 1) - x(i)) / r;
+      }      
     }
     else
     {
       // Compute force for small mass
-      
-      fx += 0.0;
+      unsigned int i1 = (i - p*p) % (p - 1);
+      unsigned int i2 = (i - p*p) / (p - 1);
+      unsigned int j  = i2*p + i1; // Large mass at south-west
+
+      // Add force from south-west
+      if ( (i1 + i2) % 2 == 0 )
+      {
+	real r = dist(i, j);
+	fx += (r - hsmall) * (x(j) - x(i)) / r;
+      }
+
+      // Add force from south-east
+      if ( (i1 + i2) % 2 == 1 )
+      {
+	real r = dist(i, j + 1);
+	fx += (r - hsmall) * (x(j + 1) - x(i)) / r;
+      }
+
+      // Add force from north-west
+      if ( (i1 + i2) % 2 == 1 )
+      {
+	real r = dist(i, j + p);
+	fx += (r - hsmall) * (x(j + p) - x(i)) / r;
+      }
+
+      // Add force from north-east
+      if ( (i1+ i2) % 2 == 0 )
+      {
+	real r = dist(i, j + p + 1);
+	fx += (r - hsmall) * (x(j + p + 1) - x(i)) / r;
+      }
     }
     
     return fx;
@@ -92,6 +185,7 @@ public:
       // Compute force for large mass
       unsigned int i1 = i % p;
       unsigned int i2 = i / p;
+      unsigned int j  = p*p + (i2-1)*(p-1) + (i1 - 1);; // Small mass at south-west
 
       // Add force from the left
       if ( i1 > 0 )
@@ -120,12 +214,69 @@ public:
 	real r = dist(i, i + p);
 	fy += (r - h) * (y(i+p) - y(i)) / r;
       }
+
+      // Add force from south-west
+      if ( i1 > 0 && i2 > 0 && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j);
+	fy += (r - hsmall) * (y(j) - y(i)) / r;
+      }
+
+      // Add force from south-east
+      if ( i1 < (p-1) && i2 > 0 && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j + 1);
+	fy += (r - hsmall) * (y(j + 1) - y(i)) / r;
+      }
+
+      // Add force from north-west
+      if ( i1 > 0 && i2 < (p-1) && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j + p - 1);
+	fy += (r - hsmall) * (y(j + p - 1) - y(i)) / r;
+      }
+
+      // Add force from north-east
+      if ( i1 < (p-1) && i2 < (p-1) && (i1 + i2) % 2 == 0)
+      {
+	real r = dist(i, j + p - 1 + 1);
+	fy += (r - hsmall) * (y(j + p - 1 + 1) - y(i)) / r;
+      }
     }
     else
     {
       // Compute force for small mass
+      unsigned int i1 = (i - p*p) % (p - 1);
+      unsigned int i2 = (i - p*p) / (p - 1);
+      unsigned int j  = i2 * p + i1;
 
-      fy += 0.0;
+      // Add force from south-west
+      if ( (i1 + i2) % 2 == 0 )
+      {
+	real r = dist(i, j);
+	fy += (r - hsmall) * (y(j) - y(i)) / r;
+      }
+
+      // Add force from south-east
+      if ( (i1 + i2) % 2 == 1 )
+      {
+	real r = dist(i, j + 1);
+	fy += (r - hsmall) * (y(j + 1) - y(i)) / r;
+      }
+
+      // Add force from north-west
+      if ( (i1 + i2) % 2 == 1 )
+      {
+	real r = dist(i, j + p);
+	fy += (r - hsmall) * (y(j + p) - y(i)) / r;
+      }
+
+      // Add force from north-east
+      if ( (i1+ i2) % 2 == 0 )
+      {
+	real r = dist(i, j + p + 1);
+	fy += (r - hsmall) * (y(j + p + 1) - y(i)) / r;
+      }
     }
 
     return fy;
@@ -135,6 +286,11 @@ private:
 
   unsigned int p;
   real h;
+  real hsmall;
+  real m;
+
+  Vector dx;
+  Vector dy;
 
 };
 
@@ -142,14 +298,15 @@ int main()
 {
   dolfin_set("output", "plain text");
   dolfin_set("tolerance", 0.1);
-  //dolfin_set("initial time step", 0.0000000001);
+  dolfin_set("initial time step", 0.01);
+  dolfin_set("fixed time step", true);
   dolfin_set("solve dual problem", false);
   dolfin_set("number of samples", 100);
   //dolfin_set("automatic modeling", true);
   dolfin_set("average length", 0.0000001);
   dolfin_set("average samples", 1000);
 
-  Structure structure(2);
+  Structure structure(5);
   structure.solve();
   
   return 0;
